--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "912e3d86-566e-4817-a61f-9d13fea40413"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
